added starting styles and animation

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <main>
-      <div class="square"></div>
-      <div class="square"></div>
-    </main>
+    <div class="container">
+      <main class="tilted">
+        <div class="square"></div>
+        <div class="square"></div>
+      </main>
+    </div>
+
     <div class="extra">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et ipsam alias
